[tool.poetry]
name = "kubolt"
version = "0.1.0"
description = "kubolt with poetry"
authors = ["AlrikRr"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "6.7"
shodan = "1.7.7"
requests = "2.28.1"
urllib3 = "1.26.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
